<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Calculadora</string>

    <string name="numeroInicial">0</string>
    <string name="memAdd">M+</string>
    <string name="mem">M</string>
    <string name="CleanLast">C</string>
    <string name="Clean">CE</string>
    <string name="Plus">+</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="potencia">POT</string>
    <string name="minus">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="raiz">RAIZ</string>
    <string name="multiply">*</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="mod">%</string>
    <string name="divide">/</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="plusminus">+/-</string>
    <string name="Off">OFF</string>
    <string name="equal">=</string>
    <string name="memClean">MC</string>
    <string name="poweDouble">X^2</string>
    <string name="sin">SENO</string>
    <string name="cos">COSENO</string>
    <string name="oneDivideX">1/X</string>
    <string name="memLess">M-</string>
    <string name="tan">TAN</string>
    <string name="pi">pi</string>
    <string name="memWrite">MR</string>

</resources>
